--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <!-- barra de navegacion -->
-<nav id="barra" class="navbar navbar-expand-lg align-item-center">
+<nav id="barra" class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <div class="navbar-brand">
       <img src="img/logo2.png" alt="logo vinoteca">
@@ -51,10 +51,10 @@
             Elaboración
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="elavoraciontinto.html">Tinto </a></li>
-            <li><a class="dropdown-item" href="elavoracionblanco.html">Blanco</a></li>
-            <li><a class="dropdown-item" href="encontruccion.html">Rosado</a></li>
-            <li><a class="dropdown-item" href="encontruccion.html">Espumantes</a></li>
+            <li><a class="dropdown-item" href="elaboraciontinto.html">Tinto </a></li>
+            <li><a class="dropdown-item" href="elaboracionblanco.html">Blanco</a></li>
+            <li><a class="dropdown-item" href="enconstruccion.html">Rosado</a></li>
+            <li><a class="dropdown-item" href="enconstruccion.html">Espumantes</a></li>
           </ul>
         </li>
         <li class="nav-item align-self-center">
@@ -67,7 +67,7 @@
   </div>
 </nav>
 <!-- fin barra -->
-  <section class="row secciones">
+  <section class="row w-100 secciones">
     <!-- carrusel -->
     <aside id="carrusel" class="col-12">
       <div id="sliderdevinos" class="carousel slide" data-bs-ride="carousel">
@@ -97,7 +97,7 @@
     </aside>
   </section>
   <!-- fin carrusel /inicio de entradas-->
-  <section class="row secciones">
+  <section class="row w-100 secciones">
     <div class="col-sm-1 col-md-6 col-xl-3 text-center justify-content-center sombras">
       <h1 class="textoNeonRojo">Novedades</h1>
       <p class=" text-light">Actualizamos todos los lunes</p>
@@ -108,7 +108,7 @@
        
     </div>
     <div class="col-sm-1 col-md-6 col-xl-3">
-      <a href="1entrada.html">
+      <a href="entradas/1entrada.html">
       <div class="card bg-dark text-white">
         <img src="img/entradas/1.jpeg" class="card-img" alt="...">
         <div class="card-img-overlay">
@@ -120,7 +120,7 @@
     </a>
     </div>
     <div class="col-sm-1 col-md-6 col-xl-3">
-      <a href="2entrada.html">
+      <a href="entradas/2entrada.html">
       <div class="card bg-dark text-white">
         <img src="img/entradas/2.png" class="card-img" alt="...">
         <div class="card-img-overlay">
@@ -133,7 +133,7 @@
     </div>
     
     <div class="col-sm-1 col-md-6 col-xl-3">
-      <a href="3entrada.html">
+      <a href="entradas/3entrada.html">
       <div class="card bg-dark text-white">
         <img src="img/entradas/3.jpeg" class="card-img" alt="...">
         <div class="card-img-overlay">
@@ -146,7 +146,7 @@
     </div>
   </section> <!-- fin noticias -->
   <!-- Variedades-->
-  <section class=" secciones row">
+  <section class="row w-100 secciones">
     <div class="col-sm-1 col-md-6 col-xl-6 col-6">
       <a href="vinostintos.html">
         <h2 class="textoNeonRojo" style="  padding: 2rem; position: absolute; z-index: 3;">Tintos</h2>
@@ -169,7 +169,7 @@
     crossorigin="anonymous"></script>
 </body>
 <footer>
-  <div class="row secciones">
+  <div class="row w-100 secciones">
     <!-- inicio  contacto-->
       <!-- Modal -->
     <div class="modal fade " id="formulario_contacto" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -235,7 +235,7 @@
         </div>
       </div>
     </div>
-    <section name="contacto" class="row secciones">
+    <section name="contacto" class="row w-100">
       <div class="col-sm-1 col-md-4 col-xl-4 text-center">
         <h1 class="textoNeonRojo text-center">Contacto</h1>
         <button type="button" class="btn btn-danger mx-auto" data-bs-toggle="modal"
