--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </li>
         <li class="nav-item align-self-center">
           <a class="nav-link text-white" href="#" tabindex="-1" aria-disabled="true">
-            Aliados Gastronomicos
+            Maridaje
           </a>
         </li>
       </ul>
@@ -258,17 +258,16 @@
         <h1 class="textoNeonRojo text-center">+ Info</h1>
         <p>Proyecto1 RollingCode</p>
         <p>Herramientas: HTML, CSS, Bootstrap, Trello</p>
-        <p>Año: 2021</p>
-        <div class="text-end">
-        <a class="btn btn-danger" href="#barra"> 
-          <p>Ir al cielo!</p> </a>
-        </div>
+        <p>Año: 2021</p>       
       </div>
-
     </section>
-    <div class="col-12 text-center">
+    <div id="leyendafinal" class="col-12 text-center">
       <p>Vinoteca la ComarcaForce © 2021
         Beber con moderación. Prohibida su venta a menores de 18 años. </p>
+        <div class="align-content-end">
+          <a class="btn btn-danger" href="#barra" role="button">Ir al cielo!</a>
+          </div>
+  
     </div>
   </div>
 </footer>
