--- a/vinosblancos.html
+++ b/vinosblancos.html
@@ -71,7 +71,7 @@
 
 <body>
   <section class="secciones row w-100">
-    <h1 class="textoNeonRojo"><i class="fas fa-wine-bottle"></i> Vinos Tintos</h1>
+    <h1 class="textoNeonRojo"><i class="fas fa-wine-bottle"></i> Vinos Blancos </h1>
     <div class="col-sm-6">
       <!-- inicio tarjeta-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
