--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
   </div>
 </nav>
 <!-- fin barra -->
-  <section class="row w-100 secciones">
+  <div class="container-fluid">
+  <section class="row secciones">
     <!-- carrusel -->
     <aside id="carrusel" class="col-12">
       <div id="sliderdevinos" class="carousel slide" data-bs-ride="carousel">
@@ -96,9 +97,11 @@
       </div>
     </aside>
   </section>
+  </div>
   <!-- fin carrusel /inicio de entradas-->
-  <section class="row w-100 secciones">
-    <div class="col-sm-1 col-md-6 col-xl-3 text-center justify-content-center sombras">
+  <div class="container-fluid">
+  <section class="row secciones">
+    <div class="col-sm-12 col-md-6 col-xl-3 text-center justify-content-center sombras">
       <h1 class="textoNeonRojo">Novedades</h1>
       <p class=" text-light">Actualizamos todos los lunes</p>
       <hr>
@@ -107,7 +110,7 @@
         aliquid!</p>
        
     </div>
-    <div class="col-sm-1 col-md-6 col-xl-3">
+    <div class="col-sm-12 col-md-6 col-xl-3">
       <a href="entradas/1entrada.html">
       <div class="card bg-dark text-white">
         <img src="img/entradas/1.jpeg" class="card-img" alt="...">
@@ -119,7 +122,7 @@
       </div>
     </a>
     </div>
-    <div class="col-sm-1 col-md-6 col-xl-3">
+    <div class="col-sm-12 col-md-6 col-xl-3">
       <a href="entradas/2entrada.html">
       <div class="card bg-dark text-white">
         <img src="img/entradas/2.png" class="card-img" alt="...">
@@ -132,7 +135,7 @@
     </a>
     </div>
     
-    <div class="col-sm-1 col-md-6 col-xl-3">
+    <div class="col-sm-12 col-md-6 col-xl-3">
       <a href="entradas/3entrada.html">
       <div class="card bg-dark text-white">
         <img src="img/entradas/3.jpeg" class="card-img" alt="...">
@@ -144,10 +147,12 @@
         </div>
       </a>
     </div>
+   
   </section> <!-- fin noticias -->
   <!-- Variedades-->
-  <section class="row w-100 secciones">
-    <div class="col-sm-1 col-md-6 col-xl-6 col-6">
+  <div class="container-fluid">
+  <section class="row secciones">
+    <div class="col-sm-12 col-md-6 col-xl-6 col-6">
       <a href="vinostintos.html">
         <h2 class="textoNeonRojo" style="  padding: 2rem; position: absolute; z-index: 3;">Tintos</h2>
         <div class="caja">
@@ -156,7 +161,7 @@
         </div>
       </a>
     </div>
-    <div class="col-sm-1 col-md-6 col-xl-6 col-6">
+    <div class="col-sm-12 col-md-6 col-xl-6 col-6">
       <h2 class="textoNeonRojo" style="  padding: 2rem; position: absolute; z-index: 3;">Blancos</h2>
       <div class="caja">
         <img class="img-fluid" src="img/botonblanco.png" alt="">
@@ -164,12 +169,13 @@
       </div>
     </div>
   </section> <!-- fin variedades -->
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
 </body>
 <footer>
-  <div class="row w-100 secciones">
+  <div class="row secciones">
     <!-- inicio  contacto-->
       <!-- Modal -->
     <div class="modal fade " id="formulario_contacto" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -236,7 +242,7 @@
       </div>
     </div>
     <section name="contacto" class="row w-100">
-      <div class="col-sm-1 col-md-4 col-xl-4 text-center">
+      <div class="col-sm-12 col-md-4 col-xl-4 text-center">
         <h1 class="textoNeonRojo text-center">Contacto</h1>
         <button type="button" class="btn btn-danger mx-auto" data-bs-toggle="modal"
           data-bs-target="#formulario_contacto">
@@ -244,7 +250,7 @@
         </button>
       </div>
       <!-- fin de contacto -->
-      <div class="col-sm-1 col-md-4 col-xl-4">
+      <div class="col-sm-12 col-md-4 col-xl-4">
         <h1 class="textoNeonRojo text-center">En redes</h1>
         <div class="text-light h2 text-center">
         <a href=""> <i class="text-light fab fa-facebook"></i></a> :
@@ -254,7 +260,7 @@
         <a href=""> <i class="text-light fab fa-whatsapp"></i></a>
       </div>
       </div>
-      <div class="col-sm-1 col-md-4 col-xl-4">
+      <div class="col-sm-12 col-md-4 col-xl-4">
         <h1 class="textoNeonRojo text-center">+ Info</h1>
         <p>Proyecto1 RollingCode</p>
         <p>Herramientas: HTML, CSS, Bootstrap, Trello</p>
