--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
             </div>
           </div>
           <div class="modal-footer">
+            <span class="requerido">* campos obligatorios</span>
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
             <button type="button" class="btn btn-success">Enviar</button>
           </div>
