modificando clases y agregando maridaje

--- a/maridaje.html
+++ b/maridaje.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Hoja de estilos -->
   <link rel="stylesheet" href="css/vinos.css">
+  <link rel="stylesheet" href="css/maridaje.css">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -66,110 +67,129 @@
     </div>
   </div>
 </nav>
-<!-- fin barra -->
-  <div class="container-fluid">
-  <section class="row secciones">
-    <!-- carrusel -->
-    <aside id="carrusel" class="col-12">
-      <div id="sliderdevinos" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/slider/1s.png" class="img-fluid" alt="vino">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/2s.png" class="img-fluid" alt="vino2">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/3s.png" class="img-fluid" alt="bodega1">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/4s.png" class="img-fluid" alt="bodega2">
+<!-- inicio de maridaje  -->
+<div class="container">
+  <div class="row">
+    <div class="card-wrapper col-lg-4 col-md-6 col-xs-12">
+      <div class="card">
+        <div class="card-img-efecto">
+          <img class="card-img-top" src="img/maridaje/carnes_rojas.jpg" alt="carnes_rojas_imagen">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Carnes Grasas  </h5>
+          <div class="card-content">
+            <p class="texto-maridaje">Van de maravillas con vinos tintos de variedades intensas, con paso por barrica. Malbec, Cabernet Sauvignon, Cabernet Franc, Bonarda, Petit Verdot y Tannat.</p>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#sliderdevinos" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Anterior</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#sliderdevinos" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Siguiente</span>
-        </button>
       </div>
-    </aside>
-  </section>
+    </div>
+    <div class="card-wrapper col-lg-4 col-md-6 col-xs-12">
+      <div class="card">
+        <div class="card-img-efecto">
+          <img class="card-img-top" src="img/maridaje/magras.png" alt="carnes_magras">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Carnes Magras</h5>
+          <div class="card-content">
+            <p class="texto-maridaje" >Prefieren tintos con leve paso por barricas y variedades con taninos medios o escasos. Pinot Noir, Merlot, Tempranillo (Argentina) y Sangiovese.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-wrapper col-lg-4 col-md-6 col-xs-12">
+      <div class="card">
+        <div class="card-img-efecto">
+          <img class="card-img-top" src="img/maridaje/pescados.jpg" alt="pescados">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Pescados</h5>
+          <div class="card-content">
+            <p class="texto-maridaje">Pescados grasos: Se entienden muy bien con blancos con prolongado paso por barrica (Chardonnay, Viognier, Semillón) o tintos ligeros (Pinot Noir, Merlot).</p>
+             <p class="texto-maridaje"> Pescados magros: Combinan muy bien con vinos blancos ligeros, frescos, frutados (Sauvignon Blanc, Torrontés, Tocai Friulano).</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-wrapper col-lg-4 col-md-6 col-xs-12">
+      <div class="card">
+        <div class="card-img-efecto">
+          <img class="card-img-top" src="img/maridaje/carnes_blancas.jpg" alt="blancas">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Carnes Blancas</h5>
+          <div class="card-content">
+            <p class="texto-maridaje">Pollo y cerdo: Logran un excelente tándem con vinos tintos leves o con leve paso por barricas (Pinot Noir, nuevamente, un comodín). Pueden ir muy bien Malbecs jóvenes o Cabernet Sauvignon modernos. Asimismo, combinan con Merlot (sin madera) o un joven Cabernet Franc. Entre las blancas, las variedades ideales son Chardonnay (pequeño paso por madera), Viognier o Semillón.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-wrapper col-lg-4 col-md-6 col-xs-12">
+      <div class="card"> 
+        <div class="card-img-efecto">
+          <img class="card-img-top" src="img/maridaje/vino_rosado.png" alt="rosado">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Vino Rosado</h5>
+          <div class="card-content">
+            <p class="texto-maridaje">¿Qué pasa con el vino rosado? Sobresale por su versatilidad.
+              Las etiquetas rosés son gratas opciones para armonizar:
+              Picadas;
+              Carne de pollo y cerdo;
+              Ciertas carnes rojas (entraña, tapa de nalga, colita de cuadril, lomo);
+              Ensaladas de camarones, frutos de mar, mariscos;
+              Pescados magros y grasos.
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-wrapper col-lg-4 col-md-6 col-xs-12">
+      <div class="card">
+        <div class="card-img-efecto">
+          <img class="card-img-top" src="img/maridaje/picante.jpg" alt="picante">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Picantes</h5>
+          <div class="card-content">
+            <p class="texto-maridaje">¿Por qué “lo picante” no va con “lo picante”? Porque se generan el efecto opuesto, con tintes negativos. Aparecen indeseados sabores metálicos o distorsionados, poco agradables.  
+Por ello, es importante bajar esa sensación picantita con un vino blanco ágil, fresco, ligero, sin mucho volumen. Ejemplos de variedades: Torrontés, Sauvignon Blanc, Tocai o Viognier sin paso por barricas.
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-wrapper col-lg-4 col-md-6 col-xs-12">
+      <div class="card">
+        <div class="card-img-efecto">
+          <img class="card-img-top" src="img/maridaje/dulces.jpg" alt="dulce">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Dulces</h5>
+          <div class="card-content">
+            <p class="texto-maridaje">Lo ideal es que lo dulce vaya con lo dulce. Tortas, postres, frutas y elaboraciones con cierto tenor dulzón, combinan a la perfección con espumosos demi sec o dulces y vinos cosechas tardías o dulces naturales.
+              Una tira de asado con un vino dulce ¡No pegaría ni con la gotita!              
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-wrapper col-lg-4 col-md-6 col-xs-12">
+      <div class="card">
+        <div class="card-img-efecto">
+          <img class="card-img-top" src="img/maridaje/salinidad.jpg" alt="salinidad">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Salinidad</h5>
+          <div class="card-content">
+            <p class="texto-maridaje">En general, todo alimento con alto componente salino es complejo de maridar. En este caso, necesitamos vinos con notas minerales. Los Pinot y Sauvignon Blanc son una muy buena opción para complementar estas elaboraciones.            
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <!-- fin carrusel /inicio de entradas-->
-  <div class="container-fluid">
-  <section class="row secciones">
-    <div class="col-sm-12 col-md-6 col-xl-3 text-center justify-content-center sombras">
-      <h1 class="textoNeonRojo">Novedades</h1>
-      <p class=" text-light">Actualizamos todos los lunes</p>
-      <hr>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores tempora, assumenda est molestiae delectus
-        deleniti? Iste magni tempore eum fugit consequuntur odit, culpa hic explicabo est tempora accusamus corrupti
-        aliquid!</p>
-       
-    </div>
-    <div class="col-sm-12 col-md-6 col-xl-3">
-      <a href="entradas/1entrada.html">
-      <div class="card bg-dark text-white">
-        <img src="img/entradas/1.jpeg" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h5 class="card-title">Vitivinicultura y sustentabilidad</h5>
-          <p class="card-text">la Sustentabilidad se refiere al abordaje de nuestras actividades..</p>
-          <p class="card-text">14-06-2021</p>
-        </div>
-      </div>
-    </a>
-    </div>
-    <div class="col-sm-12 col-md-6 col-xl-3">
-      <a href="entradas/2entrada.html">
-      <div class="card bg-dark text-white">
-        <img src="img/entradas/2.png" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h5 class="card-title">El maridaje de vinos</h5>
-          <p class="card-text">los maridajes no solo se hacen con comida. ¿Has pensado alguna vez al tomar vino en un ritmo musical...</p>
-          <p class="card-text">07-06-2021</p>
-        </div>
-      </div>
-    </a>
-    </div>
-    
-    <div class="col-sm-12 col-md-6 col-xl-3">
-      <a href="entradas/3entrada.html">
-      <div class="card bg-dark text-white">
-        <img src="img/entradas/3.jpeg" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h5 class="card-title">Cosas importantes sobre el vino</h5>
-          <p class="card-text">El vino es un producto natural: La fermentación es un proceso que tiene mucho de poesía y de magia…</p>
-          <p class="card-text">31-05-2021</p>
-        </div>
-        </div>
-      </a>
-    </div>
-   
-  </section> <!-- fin noticias -->
-  <!-- Variedades-->
-  <div class="container-fluid">
-  <section class="row secciones">
-    <div class="col-sm-12 col-md-6 col-xl-6 col-6">
-      <a href="vinostintos.html">
-        <h2 class="textoNeonRojo" style="  padding: 2rem; position: absolute; z-index: 3;">Tintos</h2>
-        <div class="caja">
-          <img class="img-fluid" src="img/botontinto.png" alt="">
-          <p>Descubra la mejor colección de viños tintos argentinos seleccionados por categorias</p>
-        </div>
-      </a>
-    </div>
-    <div class="col-sm-12 col-md-6 col-xl-6 col-6">
-      <h2 class="textoNeonRojo" style="  padding: 2rem; position: absolute; z-index: 3;">Blancos</h2>
-      <div class="caja">
-        <img class="img-fluid" src="img/botonblanco.png" alt="">
-        <p>Lo mejores Torrontes</p>
-      </div>
-    </div>
-  </section> <!-- fin variedades -->
-  </div>
+</div>
+<!-- fin de maridaje-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
