--- a/nosotros.html
+++ b/nosotros.html
@@ -113,7 +113,7 @@
       <div class="row people d-flex justify-content-center">
         <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
           <div class="box"
-            style="background-image:url(https://scontent.ftuc1-2.fna.fbcdn.net/v/t1.6435-9/165723240_10225132252037206_24299184543937230_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=xqnWrFrlrIoAX_lmHLo&_nc_ht=scontent.ftuc1-2.fna&oh=40b90497920bb9461728b2a0191a51c4&oe=60E404BB)">
+            style="background-image:url(img/nosotros/jpc.jpg)">
             <div class="cover">
               <h3 class="name">Juan Pablo Caponetto</h3>
               <p class="title">FullStack </p>
