--- a/maridaje.html
+++ b/maridaje.html
@@ -19,7 +19,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
   </style>
-  <title>Vinoteca</title>
+  <title>Vinoteca: Maridaje</title>
 </head>
 <body>
   <!-- barra de navegacion -->
