--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Hoja de estilos -->
   <link rel="stylesheet" href="css/vinos.css">
+  <link rel="stylesheet" href="css/marcas.css">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -22,162 +24,204 @@
 </head>
 <body>
   <!-- barra de navegacion -->
-<nav id="barra" class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <div class="navbar-brand">
-      <img src="img/logo2.png" alt="logo vinoteca">
-    </div>
-    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-      aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon">
-      </span>
-    </button>    
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item align-self-center">
-          <a class="nav-link text-white" aria-current="page" href="index.html">
-            Inicio
-          </a>
-        </li>
-        <li class="nav-item align-self-center">
-          <a class="nav-link text-white" href="nosotros.html">
-            Nosotros
-          </a>
-        </li>
-        <li class="nav-item dropdown align-self-center">
-          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Elaboración
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="elaboraciontinto.html">Tinto </a></li>
-            <li><a class="dropdown-item" href="elaboracionblanco.html">Blanco</a></li>
-            <li><a class="dropdown-item" href="enconstruccion.html">Rosado</a></li>
-            <li><a class="dropdown-item" href="enconstruccion.html">Espumantes</a></li>
-          </ul>
-        </li>
-        <li class="nav-item align-self-center">
-          <a class="nav-link text-white" href="maridaje.html" tabindex="-1" aria-disabled="true">
-            Maridaje
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<!-- fin barra -->
-  <div class="container-fluid">
-  <section class="row secciones">
-    <!-- carrusel -->
-    <aside id="carrusel" class="col-12">
-      <div id="sliderdevinos" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/slider/1s.png" class="img-fluid" alt="vino">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/2s.png" class="img-fluid" alt="vino2">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/3s.png" class="img-fluid" alt="bodega1">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/4s.png" class="img-fluid" alt="bodega2">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#sliderdevinos" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Anterior</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#sliderdevinos" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Siguiente</span>
-        </button>
+  <nav id="barra" class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <div class="navbar-brand">
+        <img src="img/logo2.png" alt="logo vinoteca">
       </div>
-    </aside>
-  </section>
+      <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon">
+        </span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item align-self-center">
+            <a class="nav-link text-white" aria-current="page" href="index.html">
+              Inicio
+            </a>
+          </li>
+          <li class="nav-item align-self-center">
+            <a class="nav-link text-white" href="nosotros.html">
+              Nosotros
+            </a>
+          </li>
+          <li class="nav-item dropdown align-self-center">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Elaboración
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="elaboraciontinto.html">Tinto </a></li>
+              <li><a class="dropdown-item" href="elaboracionblanco.html">Blanco</a></li>
+              <li><a class="dropdown-item" href="enconstruccion.html">Rosado</a></li>
+              <li><a class="dropdown-item" href="enconstruccion.html">Espumantes</a></li>
+            </ul>
+          </li>
+          <li class="nav-item align-self-center">
+            <a class="nav-link text-white" href="maridaje.html" tabindex="-1" aria-disabled="true">
+              Maridaje
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- fin barra -->
+  <div class="container-fluid">
+    <section class="row secciones">
+      <!-- carrusel -->
+      <aside id="carrusel" class="col-12">
+        <div id="sliderdevinos" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/slider/1s.png" class="img-fluid" alt="vino">
+            </div>
+            <div class="carousel-item">
+              <img src="img/slider/2s.png" class="img-fluid" alt="vino2">
+            </div>
+            <div class="carousel-item">
+              <img src="img/slider/3s.png" class="img-fluid" alt="bodega1">
+            </div>
+            <div class="carousel-item">
+              <img src="img/slider/4s.png" class="img-fluid" alt="bodega2">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#sliderdevinos" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#sliderdevinos" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+          </button>
+        </div>
+      </aside>
+    </section>
   </div>
   <!-- fin carrusel /inicio de entradas-->
   <div class="container-fluid">
-  <section class="row secciones">
-    <div class="col-sm-12 col-md-6 col-xl-3 text-center justify-content-center sombras">
-      <h1 class="textoNeonRojo">Novedades</h1>
-      <p class=" text-light">Actualizamos todos los lunes</p>
-      <hr>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores tempora, assumenda est molestiae delectus
-        deleniti? Iste magni tempore eum fugit consequuntur odit, culpa hic explicabo est tempora accusamus corrupti
-        aliquid!</p>
-       
-    </div>
-    <div class="col-sm-12 col-md-6 col-xl-3">
-      <a href="entradas/1entrada.html">
-      <div class="card bg-dark text-white">
-        <img src="img/entradas/1.jpeg" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h5 class="card-title">Vitivinicultura y sustentabilidad</h5>
-          <p class="card-text">la Sustentabilidad se refiere al abordaje de nuestras actividades..</p>
-          <p class="card-text">14-06-2021</p>
-        </div>
+    <section class="row secciones">
+      <div class="col-sm-12 col-md-6 col-xl-3 text-center justify-content-center sombras">
+        <h1 class="textoNeonRojo">Novedades</h1>
+        <p class=" text-light">Actualizamos todos los lunes</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores tempora, assumenda est molestiae delectus
+          deleniti? Iste magni tempore eum fugit consequuntur odit, culpa hic explicabo est tempora accusamus corrupti
+          aliquid!</p>
+
       </div>
-    </a>
-    </div>
-    <div class="col-sm-12 col-md-6 col-xl-3">
-      <a href="entradas/2entrada.html">
-      <div class="card bg-dark text-white">
-        <img src="img/entradas/2.png" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h5 class="card-title">El maridaje de vinos</h5>
-          <p class="card-text">los maridajes no solo se hacen con comida. ¿Has pensado alguna vez al tomar vino en un ritmo musical...</p>
-          <p class="card-text">07-06-2021</p>
-        </div>
+      <div class="col-sm-12 col-md-6 col-xl-3">
+        <a href="entradas/1entrada.html">
+          <div class="card bg-dark text-white">
+            <img src="img/entradas/1.jpeg" class="card-img" alt="...">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Vitivinicultura y sustentabilidad</h5>
+              <p class="card-text">la Sustentabilidad se refiere al abordaje de nuestras actividades..</p>
+              <p class="card-text">14-06-2021</p>
+            </div>
+          </div>
+        </a>
       </div>
-    </a>
-    </div>
-    
-    <div class="col-sm-12 col-md-6 col-xl-3">
-      <a href="entradas/3entrada.html">
-      <div class="card bg-dark text-white">
-        <img src="img/entradas/3.jpeg" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h5 class="card-title">Cosas importantes sobre el vino</h5>
-          <p class="card-text">El vino es un producto natural: La fermentación es un proceso que tiene mucho de poesía y de magia…</p>
-          <p class="card-text">31-05-2021</p>
-        </div>
-        </div>
-      </a>
-    </div>
-   
-  </section> <!-- fin noticias -->
-  <!-- Variedades-->
-  <div class="container-fluid">
-  <section class="row secciones">
-    <div class="col-sm-12 col-md-6 col-xl-6 col-6">
-      <a href="vinostintos.html">
-        <h2 class="textoNeonRojo" style="  padding: 2rem; position: absolute; z-index: 3;">Tintos</h2>
-        <div class="caja">
-          <img class="img-fluid" src="img/botontinto.png" alt="">
-          <p>Descubra la mejor colección de viños tintos argentinos seleccionados por categorias</p>
-        </div>
-      </a>
-    </div>
-    <div class="col-sm-12 col-md-6 col-xl-6 col-6">
-      <h2 class="textoNeonRojo" style="  padding: 2rem; position: absolute; z-index: 3;">Blancos</h2>
-      <div class="caja">
-        <img class="img-fluid" src="img/botonblanco.png" alt="">
-        <p>Lo mejores Torrontes</p>
+      <div class="col-sm-12 col-md-6 col-xl-3">
+        <a href="entradas/2entrada.html">
+          <div class="card bg-dark text-white">
+            <img src="img/entradas/2.png" class="card-img" alt="...">
+            <div class="card-img-overlay">
+              <h5 class="card-title">El maridaje de vinos</h5>
+              <p class="card-text">los maridajes no solo se hacen con comida. ¿Has pensado alguna vez al tomar vino en
+                un ritmo musical...</p>
+              <p class="card-text">07-06-2021</p>
+            </div>
+          </div>
+        </a>
       </div>
+
+      <div class="col-sm-12 col-md-6 col-xl-3">
+        <a href="entradas/3entrada.html">
+          <div class="card bg-dark text-white">
+            <img src="img/entradas/3.jpeg" class="card-img" alt="...">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Cosas importantes sobre el vino</h5>
+              <p class="card-text">El vino es un producto natural: La fermentación es un proceso que tiene mucho de
+                poesía y de magia…</p>
+              <p class="card-text">31-05-2021</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+    </section> <!-- fin noticias -->
+    <!-- Variedades-->
+    <div class="w-100">
+      <section class="row secciones">
+        <div class="col-sm-12 col-md-6 col-xl-6 col-6">
+          <a href="vinostintos.html">
+            <h2 class="textoNeonRojo" style="  padding: 2rem; position: absolute; z-index: 3;">Tintos</h2>
+            <div class="caja">
+              <img class="img-fluid" src="img/botontinto.png" alt="">
+              <p>Descubra la mejor colección de viños tintos argentinos seleccionados por categorias</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-xl-6 col-6">
+          <a href="vinosblancos.html">
+            <h2 class="textoNeonRojo" style="  padding: 2rem; position: absolute; z-index: 3;">Blancos</h2>
+            <div class="caja">
+              <img class="img-fluid" src="img/botonblanco.png" alt="">
+              <p>Nuestra selección de blancos que no deberias perderte</p>
+            </div>
+          </a>
+        </div>
+      </section> <!-- fin variedades -->
+        <section class=" secciones">
+          <!-- marcas de vinos -->
+          <div class="slider">
+            <div class="slide-track">
+              <div class="slide">
+                <img src="img/marcas/bianchi.png" height="100" width="250" alt="">
+              </div>
+              <div class="slide">
+                <img src="img/marcas/bodega-vila.jpg" height="100" width="250" alt="">
+              </div>
+              <div class="slide">
+                <img src="img/marcas/bressia.jpg" height="100" width="250" alt="">
+              </div>
+              <div class="slide">
+                <img src="img/marcas/cruzat.png" height="100" width="250" alt="">
+              </div>
+              <div class="slide">
+                <img src="img/marcas/estanciamendoza.png" height="100" width="250" alt="">
+              </div>
+              <div class="slide">
+                <img src="img/marcas/lasmoras.jpg" height="100" width="250" alt="">
+              </div>
+              <div class="slide">
+                <img src="img/marcas/norton.jpg" height="100" width="250" alt="">
+              </div>
+              <div class="slide">
+                <img src="img/marcas/roda.png" height="100" width="250" alt="">
+              </div>
+              <div class="slide">
+                <img src="img/marcas/santajulia.jpg" height="100" width="250" alt="">
+              </div>
+              <div class="slide">
+                <img src="img/marcas/trapiches.png" height="100" width="250" alt="">
+              </div>
+            </div>
+          </div>
+      </section><!-- fin marcas -->
     </div>
-  </section> <!-- fin variedades -->
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"></script>
 </body>
+
 <footer>
   <div class="row secciones">
     <!-- inicio  contacto-->
-      <!-- Modal -->
+    <!-- Modal -->
     <div class="modal fade " id="formulario_contacto" tabindex="-1" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog">
@@ -254,27 +298,26 @@
       <div class="col-sm-12 col-md-4 col-xl-4">
         <h1 class="textoNeonRojo text-center">En redes</h1>
         <div class="text-light h2 text-center">
-        <a href=""> <i class="text-light fab fa-facebook"></i></a> :
-        <a href=""> <i class="text-light fab fa-twitter-square"></i></a> :
-        <a href=""> <i class="text-light fab fa-instagram"></i></a> :
-        <a href=""> <i class="text-light fab fa-youtube"></i></a> :
-        <a href=""> <i class="text-light fab fa-whatsapp"></i></a>
-      </div>
+          <a href=""> <i class="text-light fab fa-facebook"></i></a> :
+          <a href=""> <i class="text-light fab fa-twitter-square"></i></a> :
+          <a href=""> <i class="text-light fab fa-instagram"></i></a> :
+          <a href=""> <i class="text-light fab fa-youtube"></i></a> :
+          <a href=""> <i class="text-light fab fa-whatsapp"></i></a>
+        </div>
       </div>
       <div class="col-sm-12 col-md-4 col-xl-4">
         <h1 class="textoNeonRojo text-center">+ Info</h1>
         <p>Proyecto1 RollingCode</p>
         <p>Herramientas: HTML, CSS, Bootstrap, Trello</p>
-        <p>Año: 2021</p>       
+        <p>Año: 2021</p>
       </div>
     </section>
     <div id="leyendafinal" class="col-12 text-center">
       <p>Vinoteca la ComarcaForce © 2021
         Beber con moderación. Prohibida su venta a menores de 18 años. </p>
-        <div class="align-content-end">
-          <a class="btn btn-danger" href="#barra" role="button">Ir al cielo!</a>
-          </div>
-  
+      <div class="align-content-end">
+        <a class="btn btn-danger" href="#barra" role="button">Ir al cielo!</a>
+      </div>
     </div>
   </div>
 </footer>
