--- a/nosotros.html
+++ b/nosotros.html
@@ -6,11 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Hoja de estilos -->
   <link rel="stylesheet" href="css/vinos.css">
-  <link rel="stylesheet" href="css/tinto.css">  
-  <link rel="stylesheet" href="css/cards.css">  
-  <link rel="stylesheet" href="css/styles.css">  
-  <link rel="stylesheet" href="css/styles_about.css">  
-  
+  <link rel="stylesheet" href="css/cards.css">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -25,8 +21,9 @@
   </style>
   <title>Vinoteca: Nosotros</title>
 </head>
+<body>
   <!-- barra de navegacion -->
-  <nav id="barra" class="navbar navbar-expand-lg align-item-center">
+  <nav id="barra" class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <div class="navbar-brand">
         <img src="img/logo2.png" alt="logo vinoteca">
@@ -36,7 +33,7 @@
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon">
         </span>
-      </button>
+      </button>    
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item align-self-center">
@@ -44,7 +41,7 @@
               Inicio
             </a>
           </li>
-          <li class="nav-item align-self-center active">
+          <li class="nav-item align-self-center">
             <a class="nav-link text-white" href="nosotros.html">
               Nosotros
             </a>
@@ -55,15 +52,15 @@
               Elaboración
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="elavoraciontinto.html">Tinto </a></li>
-              <li><a class="dropdown-item" href="elavoracionblanco.html">Blanco</a></li>
-              <li><a class="dropdown-item" href="encontruccion.html">Rosado</a></li>
-              <li><a class="dropdown-item" href="encontruccion.html">Espumantes</a></li>
+              <li><a class="dropdown-item" href="elaboraciontinto.html">Tinto </a></li>
+              <li><a class="dropdown-item" href="elaboracionblanco.html">Blanco</a></li>
+              <li><a class="dropdown-item" href="enconstruccion.html">Rosado</a></li>
+              <li><a class="dropdown-item" href="enconstruccion.html">Espumantes</a></li>
             </ul>
           </li>
           <li class="nav-item align-self-center">
-            <a class="nav-link text-white" href="#" tabindex="-1" aria-disabled="true">
-              Aliados Gastronomicos
+            <a class="nav-link text-white" href="maridaje.html" tabindex="-1" aria-disabled="true">
+              Maridaje
             </a>
           </li>
         </ul>
@@ -71,115 +68,115 @@
     </div>
   </nav>
 <body>
-</section> <!-- NOSOTROS -->
-<section name="nosotros" class="row bg-dark text-light secciones">
-<!-- section about us-->
-<div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-  <div class="col-6"><img class="img-fluid w-100" src="img/nosotros/vinocopas.jpg" alt="vino copas" /></div>
-  <div class="col-lg-6">
-      <div class="bg-black text-center h-100 project">
+  </section> <!-- NOSOTROS -->
+  <section name="nosotros" class="row bg-dark text-light secciones">
+    <!-- section about us-->
+    <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
+      <div class="col-6"><img class="img-fluid w-100" src="img/nosotros/vinocopas.jpg" alt="vino copas" /></div>
+      <div class="col-lg-6">
+        <div class="bg-black text-center h-100 project">
           <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="textoNeonRojo">Quienes somos</h4>
-                  <p class="mb-0 text-white-50">La produccion de vino, de cada una de las bodegas seleccionadas por nuestro equipo, esta arraigado a una tradicion Argentina, y nosotros queremos compartir esa arte con todos Uds.</p>
-              </div>
+            <div class="project-text w-100 my-auto text-center text-lg-left">
+              <h4 class="textoNeonRojo">Quienes somos</h4>
+              <p class="mb-0 text-white-50">La produccion de vino, de cada una de las bodegas seleccionadas por nuestro
+                equipo, esta arraigado a una tradicion Argentina, y nosotros queremos compartir esa arte con todos Uds.
+              </p>
+            </div>
           </div>
+        </div>
       </div>
-  </div>
-</div>
-<div class="row gx-0 justify-content-center secciones">
-<div class="col-lg-6"><img class="img-fluid w-100" src="img/nosotros/vinos.jpg" alt="Vinos" /></div>
-<div class="col-lg-6 order-lg-first">
-    <div class="bg-black text-center h-100 project">
-        <div class="d-flex h-100">
+    </div>
+    <div class="row gx-0 justify-content-center secciones">
+      <div class="col-lg-6"><img class="img-fluid w-100" src="img/nosotros/vinos.jpg" alt="Vinos" /></div>
+      <div class="col-lg-6 order-lg-first">
+        <div class="bg-black text-center h-100 project">
+          <div class="d-flex h-100">
             <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="textoNeonRojo">Que buscamos</h4>
-                <p class="mb-0 text-white-50">La experiencia adquirida de nuestros vendedores hacen una excelente compañia a la hs de la seleccion de cada vino, que solo es posible alcanzar gracias a sus conocimientos y compromiso.</p>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-<!-- end section about us-->
-
-
-
-  <div class="team-grid">
-    <div class="container">
-      <div class="intro">
-        <h2 class="text-center textoNeonRojo">Nuestro Equipo</h2>
-        <p class="text-center">Comarca Force se formo en Junio del 2021 para realizar el primer proyecto practico del Curso FullStack de RollingCode.</p>
-      </div>
-      <div class="row people d-flex justify-content-center">
-        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
-          <div class="box"
-            style="background-image:url(img/nosotros/jpc.jpg)">
-            <div class="cover">
-              <h3 class="name">Juan Pablo Caponetto</h3>
-              <p class="title">FullStack </p>
-              <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
-                    class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
-          <div class="box" style="background-image:url(img/nosotros/nacho.jpeg)">
-            <div class="cover">
-              <h3 class="name">Nacho Ramos</h3>
-              <p class="title">FullStack</p>
-              <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
-                    class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
-          <div class="box" style="background-image:url(img/nosotros/jcmi.jpg)">
-            <div class="cover">
-              <h3 class="name">Juan Carlos Martinez Issa</h3>
-              <p class="title">Ninja!</p>
-              <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
-                    class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
-          <div class="box" style="background-image:url(img/nosotros/pp.jpg)">
-            <div class="cover">
-              <h3 class="name">Aylen Sly</h3>
-              <p class="title">FullStack </p>
-              <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
-                    class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
-          <div class="box" style="background-image:url()">
-            <div class="cover">
-              <h3 class="name">Juan Pablo Caponetto</h3>
-              <p class="title">FullStack </p>
-              <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
-                    class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
-          <div class="box" style="background-image:url()">
-            <div class="cover">
-              <h3 class="name">Juan Pablo Caponetto</h3>
-              <p class="title">FullStack </p>
-              <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
-                    class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+              <h4 class="textoNeonRojo">Que buscamos</h4>
+              <p class="mb-0 text-white-50">La experiencia adquirida de nuestros vendedores hacen una excelente compañia
+                a la hs de la seleccion de cada vino, que solo es posible alcanzar gracias a sus conocimientos y
+                compromiso.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section> <!-- fin NOSOTROS -->  
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-crossorigin="anonymous"></script>
-
+    <!-- end section about us-->
+    <div class="team-grid">
+      <div class="container">
+        <div class="intro">
+          <h2 class="text-center textoNeonRojo">Nuestro Equipo</h2>
+          <p class="text-center">Comarca Force se formo en Junio del 2021 para realizar el primer proyecto practico del
+            Curso FullStack de RollingCode.</p>
+        </div>
+        <div class="row people d-flex justify-content-center">
+          <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
+            <div class="box" style="background-image:url(img/nosotros/jpc.jpg)">
+              <div class="cover">
+                <h3 class="name">Juan Pablo Caponetto</h3>
+                <p class="title">Sommelier </p>
+                <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
+                      class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
+            <div class="box" style="background-image:url(img/nosotros/nacho.jpeg)">
+              <div class="cover">
+                <h3 class="name">Nacho Ramos</h3>
+                <p class="title">Tacador Pro!</p>
+                <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
+                      class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
+            <div class="box" style="background-image:url(img/nosotros/jcmi.jpg)">
+              <div class="cover">
+                <h3 class="name">Juan Carlos Martinez Issa</h3>
+                <p class="title">Ninja!</p>
+                <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
+                      class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
+            <div class="box" style="background-image:url(img/nosotros/pp.jpg)">
+              <div class="cover">
+                <h3 class="name">Aylen Maria González Sly</h3>
+                <p class="title">FullStack </p>
+                <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
+                      class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
+            <div class="box" style="background-image:url(img/nosotros/agustina.JPEG)">
+              <div class="cover">
+                <h3 class="name">Agustina Virginia Cuevas</h3>
+                <p class="title">FullStack </p>
+                <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
+                      class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
+            <div class="box" style="background-image:url(IMG/nosotros/mar.jpeg)">
+              <div class="cover">
+                <h3 class="name">Martina Mena</h3>
+                <p class="title">Vendedora</p>
+                <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
+                      class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> <!-- fin NOSOTROS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
 </body>
 <footer>
   <div class="row secciones">
@@ -242,14 +239,15 @@ crossorigin="anonymous"></script>
             </div>
           </div>
           <div class="modal-footer">
+            <span class="requerido">* campos obligatorios</span>
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
             <button type="button" class="btn btn-success">Enviar</button>
           </div>
         </div>
       </div>
     </div>
-    <section name="contacto" class="row secciones">
-      <div class="col-sm-1 col-md-4 col-xl-4 text-center">
+    <section name="contacto" class="row w-100">
+      <div class="col-sm-12 col-md-4 col-xl-4 text-center">
         <h1 class="textoNeonRojo text-center">Contacto</h1>
         <button type="button" class="btn btn-danger mx-auto" data-bs-toggle="modal"
           data-bs-target="#formulario_contacto">
@@ -257,7 +255,7 @@ crossorigin="anonymous"></script>
         </button>
       </div>
       <!-- fin de contacto -->
-      <div class="col-sm-1 col-md-4 col-xl-4">
+      <div class="col-sm-12 col-md-4 col-xl-4">
         <h1 class="textoNeonRojo text-center">En redes</h1>
         <div class="text-light h2 text-center">
           <a href=""> <i class="text-light fab fa-facebook"></i></a> :
@@ -267,23 +265,21 @@ crossorigin="anonymous"></script>
           <a href=""> <i class="text-light fab fa-whatsapp"></i></a>
         </div>
       </div>
-      <div class="col-sm-1 col-md-4 col-xl-4">
+      <div class="col-sm-12 col-md-4 col-xl-4">
         <h1 class="textoNeonRojo text-center">+ Info</h1>
         <p>Proyecto1 RollingCode</p>
         <p>Herramientas: HTML, CSS, Bootstrap, Trello</p>
         <p>Año: 2021</p>
-        <div class="text-end">
-          <a class="btn btn-danger" href="#barra">
-            <p>Ir al cielo!</p>
-          </a>
-        </div>
       </div>
-
     </section>
-    <div class="col-12 text-center">
+    <div id="leyendafinal" class="col-12 text-center">
       <p>Vinoteca la ComarcaForce © 2021
         Beber con moderación. Prohibida su venta a menores de 18 años. </p>
+      <div class="align-content-end">
+        <a class="btn btn-danger" href="#barra" role="button">Ir al cielo!</a>
+      </div>
     </div>
   </div>
 </footer>
+
 </html>
