--- a/vinosblancos.html
+++ b/vinosblancos.html
@@ -20,57 +20,56 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
   </style>
-  <title>Vinoteca: vitivinicultura y sustentabilidad</title>
+  <title>Vinoteca: vinos blancos</title>
 </head>
-<!-- barra de navegacion -->
-<nav id="barra" class="navbar navbar-expand-lg align-item-center">
-  <div class="container-fluid">
-    <div class="navbar-brand">
-      <img src="img/logo2.png" alt="logo vinoteca">
-    </div>
-    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-      aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon">
-      </span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item align-self-center">
-          <a class="nav-link text-white" aria-current="page" href="index.html">
-            Inicio
-          </a>
-        </li>
-        <li class="nav-item align-self-center">
-          <a class="nav-link text-white" href="nosotros.html">
-            Nosotros
-          </a>
-        </li>
-        <li class="nav-item dropdown align-self-center">
-          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Elaboración
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="elavoraciontinto.html">Tinto </a></li>
-            <li><a class="dropdown-item" href="elavoracionblanco.html">Blanco</a></li>
-            <li><a class="dropdown-item" href="encontruccion.html">Rosado</a></li>
-            <li><a class="dropdown-item" href="encontruccion.html">Espumantes</a></li>
-          </ul>
-        </li>
-        <li class="nav-item align-self-center">
-          <a class="nav-link text-white" href="#" tabindex="-1" aria-disabled="true">
-            Aliados Gastronomicos
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<!-- fin barra -->
-
 <body>
-  <section class="secciones row w-100">
+  <!-- barra de navegacion -->
+  <nav id="barra" class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <div class="navbar-brand">
+        <img src="img/logo2.png" alt="logo vinoteca">
+      </div>
+      <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon">
+        </span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item align-self-center">
+            <a class="nav-link text-white" aria-current="page" href="index.html">
+              Inicio
+            </a>
+          </li>
+          <li class="nav-item align-self-center">
+            <a class="nav-link text-white" href="nosotros.html">
+              Nosotros
+            </a>
+          </li>
+          <li class="nav-item dropdown align-self-center">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Elaboración
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="elaboraciontinto.html">Tinto </a></li>
+              <li><a class="dropdown-item" href="elaboracionblanco.html">Blanco</a></li>
+              <li><a class="dropdown-item" href="enconstruccion.html">Rosado</a></li>
+              <li><a class="dropdown-item" href="enconstruccion.html">Espumantes</a></li>
+            </ul>
+          </li>
+          <li class="nav-item align-self-center">
+            <a class="nav-link text-white" href="maridaje.html" tabindex="-1" aria-disabled="true">
+              Maridaje
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- fin barra -->
+  <section class="secciones row">
     <h1 class="textoNeonRojo"><i class="fas fa-wine-bottle"></i> Vinos Blancos </h1>
     <div class="col-sm-6">
       <!-- inicio tarjeta-->
@@ -87,15 +86,16 @@
           </span>
           <p class="information">
             El Chardonnay es la variedad de vino blanco más conocida del mundo.
-            Eso se debe principalmente al hecho de que es una uva que se adapta fácilmente a cualquier terreno y ofrece una calidad alta. 
+            Eso se debe principalmente al hecho de que es una uva que se adapta fácilmente a cualquier terreno y ofrece
+            una calidad alta.
             Los sabores que más caracterizan a esta variedad, son los sabores a frutas tropicales.
-            Sin embargo, el sabor varía en función de su vejez. 
-            Los vinos jóvenes suelen tener sabores asociados a frutos secos. 
+            Sin embargo, el sabor varía en función de su vejez.
+            Los vinos jóvenes suelen tener sabores asociados a frutos secos.
             Otra característica de este vino, es que suelen tener tendencia a ser seco.
           </p>
         </div>
         <div class="product-image">
-          <img src="chardonnay.jfif" alt="">
+          <img src="img/blancos/chardonnay.jfif" alt="chardonnay">
           <div class="info">
             <h2> Recomendados</h2>
             <ul>
@@ -130,14 +130,16 @@
             <i class="fa fa-star-o" aria-hidden="true"></i>
           </span>
           <p class="information">
-          A diferencia de algunos de los tipos de vino blanco,es un vino que se aconseja beber preferentemente cuando aún es joven, es decir menos de un año en barrica.
-          El sabor de esta variedad es especialmente ácido, y de su aroma emanan notas herbáceas, miel, ananá o mango.
-          Para su juventud, se trata de un caldo son sabores y aromas muy complejos.
-          Pero si se deja madurar más tiempo en barrica, suele adquirir más aromas tropicales como a piña o a la guayaba.
+            A diferencia de algunos de los tipos de vino blanco,es un vino que se aconseja beber preferentemente cuando
+            aún es joven, es decir menos de un año en barrica.
+            El sabor de esta variedad es especialmente ácido, y de su aroma emanan notas herbáceas, miel, ananá o mango.
+            Para su juventud, se trata de un caldo son sabores y aromas muy complejos.
+            Pero si se deja madurar más tiempo en barrica, suele adquirir más aromas tropicales como a piña o a la
+            guayaba.
           </p>
         </div>
-        <div class="product-image">
-          <img src="sauvignon.jfif" alt="">
+        <div class="product-image"> 
+          <img src="img/blancos/sauvignon.jfif" alt="sauvignon">
           <div class="info">
             <h2> Recomendados</h2>
             <ul>
@@ -145,7 +147,7 @@
                 <p>Riccitelli Las Carreras Sauvignon Blanc 2018 </p>
               </li>
               <li>
-                <p>Doña Paula Estate Sauvignon Blanc 2018  </p>
+                <p>Doña Paula Estate Sauvignon Blanc 2018 </p>
               </li>
               <li>
                 <p>Perdriel Series Sauvignon Blanc 2018</p>
@@ -174,14 +176,16 @@
           <p class="information">
             Se encuentra únicamente en Argentina y se consolida como la firma del vino blanco del país.
             Existen tres variantes de Torrontés:
-            el mendocino y el sanjuanino, con más aptitudes para el consumo en fresco, y el riojano que es el más cultivado 
-            y el que expresa las mejores cualidades para la elaboración de vinos finos, muy frutados y secos a la vez, destacándose los del Valle de Cafayate IG (Salta).
-            El Torrontés es un vino amarillo claro que ocasionalmente desarrolla matices dorados y verdes. 
+            el mendocino y el sanjuanino, con más aptitudes para el consumo en fresco, y el riojano que es el más
+            cultivado
+            y el que expresa las mejores cualidades para la elaboración de vinos finos, muy frutados y secos a la vez,
+            destacándose los del Valle de Cafayate IG (Salta).
+            El Torrontés es un vino amarillo claro que ocasionalmente desarrolla matices dorados y verdes.
             Se caracteriza por su aroma a flores.
           </p>
         </div>
         <div class="product-image">
-          <img src="torrontes.jpg" alt="">
+          <img src="img/blancos/torrontes.jpg" alt="torrontes">
           <div class="info">
             <h2> Recomendados</h2>
             <ul>
@@ -216,14 +220,15 @@
             <i class="fa fa-star-o" aria-hidden="true"></i>
           </span>
           <p class="information">
-            Este tipo de vino es antiquísimo, pues se remonta a la época de los Romanos. 
-            Existen una variedad enorme de uvas moscatel, y por eso existe mucha variedad de tipos de vino blanco moscatel.
+            Este tipo de vino es antiquísimo, pues se remonta a la época de los Romanos.
+            Existen una variedad enorme de uvas moscatel, y por eso existe mucha variedad de tipos de vino blanco
+            moscatel.
             Emana notas de rosa y lino, aunque también recuerda a hierba fresca.
-            Esta uva se utiliza especialmente para preparar vinos dulces, pues tiene un alto contenido en azúcar. 
+            Esta uva se utiliza especialmente para preparar vinos dulces, pues tiene un alto contenido en azúcar.
           </p>
         </div>
         <div class="product-image">
-          <img src="moscatel.jfif" alt="">
+          <img src="img/blancos/vinomoscatel.jpg" alt="moscatel">
           <div class="info">
             <h2> Recomendados</h2>
             <ul>
@@ -259,14 +264,14 @@
           </span>
           <p class="information">
             La luz y ciertas condiciones climáticas concretas son necesarias
-            para conseguir que la uva impregne perfectamente sus sabores al vino, 
-            de modo que si las condiciones son buenas, se consiguen buenos aromas con tendencia a ser afrutados, 
-            aromas que recuerdan al de manzana o el melocotón. 
+            para conseguir que la uva impregne perfectamente sus sabores al vino,
+            de modo que si las condiciones son buenas, se consiguen buenos aromas con tendencia a ser afrutados,
+            aromas que recuerdan al de manzana o el melocotón.
             Sin embargo, pueden encontrarse notas de miel, nueces o avellanas
           </p>
         </div>
         <div class="product-image">
-          <img src="chennin blanc.jfif" alt="">
+          <img src="img/blancos/chennin blanc.jfif" alt="chennin_blanc">
           <div class="info">
             <h2> Recomendados</h2>
             <ul>
@@ -301,14 +306,15 @@
             <i class="fa fa-star-o" aria-hidden="true"></i>
           </span>
           <p class="information">
-            Se trata de un vino con poco contenido de alcohol y poco cuerpo, 
+            Se trata de un vino con poco contenido de alcohol y poco cuerpo,
             pero que sorprende por la complejidad de sus sabores,
-            pues tiene aromas que van desde los tonos florales, pasas o de higos secos, hasta llegar al membrillo o la manzana verde. 
+            pues tiene aromas que van desde los tonos florales, pasas o de higos secos, hasta llegar al membrillo o la
+            manzana verde.
             Y sus sabores suelen pasar por la piña, el limón y la canela,
           </p>
         </div>
         <div class="product-image">
-          <img src="riesling.jpg" alt="">
+          <img src="img/blancos/riesling.jpg" alt="riesling">
           <div class="info">
             <h2> Recomendados</h2>
             <ul>
@@ -334,10 +340,11 @@
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
 </body>
+
 <footer>
   <div class="row secciones">
     <!-- inicio  contacto-->
-    <!-- Modal -->
+      <!-- Modal -->
     <div class="modal fade " id="formulario_contacto" tabindex="-1" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog">
@@ -386,7 +393,7 @@
                     <div class="col-12">
                       <div> <label for="comentario">Comentario</label>
                         <textarea id="comentario" class="form-control" placeholder="dfnvjdfjvdfv">
-                        </textarea>
+                          </textarea>
                       </div>
                     </div>
                   </div>
@@ -395,14 +402,15 @@
             </div>
           </div>
           <div class="modal-footer">
+            <span class="requerido">* campos obligatorios</span>
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
             <button type="button" class="btn btn-success">Enviar</button>
           </div>
         </div>
       </div>
     </div>
-    <section name="contacto" class="row secciones">
-      <div class="col-sm-1 col-md-4 col-xl-4 text-center">
+    <section name="contacto" class="row w-100">
+      <div class="col-sm-12 col-md-4 col-xl-4 text-center">
         <h1 class="textoNeonRojo text-center">Contacto</h1>
         <button type="button" class="btn btn-danger mx-auto" data-bs-toggle="modal"
           data-bs-target="#formulario_contacto">
@@ -410,34 +418,30 @@
         </button>
       </div>
       <!-- fin de contacto -->
-      <div class="col-sm-1 col-md-4 col-xl-4">
+      <div class="col-sm-12 col-md-4 col-xl-4">
         <h1 class="textoNeonRojo text-center">En redes</h1>
         <div class="text-light h2 text-center">
-          <a href=""> <i class="text-light fab fa-facebook"></i></a> :
-          <a href=""> <i class="text-light fab fa-twitter-square"></i></a> :
-          <a href=""> <i class="text-light fab fa-instagram"></i></a> :
-          <a href=""> <i class="text-light fab fa-youtube"></i></a> :
-          <a href=""> <i class="text-light fab fa-whatsapp"></i></a>
-        </div>
+        <a href=""> <i class="text-light fab fa-facebook"></i></a> :
+        <a href=""> <i class="text-light fab fa-twitter-square"></i></a> :
+        <a href=""> <i class="text-light fab fa-instagram"></i></a> :
+        <a href=""> <i class="text-light fab fa-youtube"></i></a> :
+        <a href=""> <i class="text-light fab fa-whatsapp"></i></a>
       </div>
-      <div class="col-sm-1 col-md-4 col-xl-4">
+      </div>
+      <div class="col-sm-12 col-md-4 col-xl-4">
         <h1 class="textoNeonRojo text-center">+ Info</h1>
         <p>Proyecto1 RollingCode</p>
         <p>Herramientas: HTML, CSS, Bootstrap, Trello</p>
-        <p>Año: 2021</p>
-        <div class="text-end">
-          <a class="btn btn-danger" href="#barra">
-            <p>Ir al cielo!</p>
-          </a>
-        </div>
+        <p>Año: 2021</p>       
       </div>
-
     </section>
-    <div class="col-12 text-center">
+    <div id="leyendafinal" class="col-12 text-center">
       <p>Vinoteca la ComarcaForce © 2021
         Beber con moderación. Prohibida su venta a menores de 18 años. </p>
+        <div class="align-content-end">
+          <a class="btn btn-danger" href="#barra" role="button">Ir al cielo!</a>
+          </div>  
     </div>
   </div>
 </footer>
-
 </html>
