arreglo estilos y imagenes de las entradas

--- a/entradas/1entrada.html
+++ b/entradas/1entrada.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Hoja de estilos -->
-  <link rel="stylesheet" href="css/vinos.css">
+  <link rel="stylesheet" href="../css/vinos.css">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -24,7 +24,7 @@
 <nav id="barra" class="navbar navbar-expand-lg align-item-center">
   <div class="container-fluid">
     <div class="navbar-brand">
-      <img src="img/logo2.png" alt="logo vinoteca">
+      <img src="../img/logo2.png" alt="logo vinoteca">
     </div>
     <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -70,7 +70,7 @@
   <section class="row secciones">
     <h1 class="textoNeonRojo"> <i class="far fa-newspaper"></i> Vitivinicultura y sustentabilidad</h1>
     <div class="col-4"> 
-    <img src="img/entradas/1.jpeg" class="rounded mx-auto d-block img-fluid " alt="">
+    <img src="../img/entradas/1.jpeg" class="rounded mx-auto d-block img-fluid " alt="">
   </div>
     <div class="col-8"> 
       <p class="">
