--- a/entradas/2entrada.html
+++ b/entradas/2entrada.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Hoja de estilos -->
-  <link rel="stylesheet" href="css/vinos.css">
+  <link rel="stylesheet" href="../css/vinos.css">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -72,7 +72,7 @@
   <section class="row secciones">
     <h1 class="textoNeonRojo"><i class="far fa-newspaper"></i> El maridaje de vinos</h1>
     <div class="col-4">
-      <img src="img/entradas/2.png" class="rounded mx-auto d-block img-fluid " alt="">
+      <img src="../img/entradas/2.png" class="rounded mx-auto d-block img-fluid " alt="">
     </div>
     <div class="col-8">
       <p class="">
