--- a/404.html
+++ b/404.html
@@ -19,54 +19,56 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
   </style>
-  <title>Vinoteca: Elaboracion vino tinto</title>
+  <title>Vinoteca: en construcción</title>
 </head>
 <!-- barra de navegacion -->
 <body>
-<nav id="barra" class="navbar navbar-expand-lg align-item-center">
-  <div class="container-fluid">
-    <div class="navbar-brand">
-      <img src="img/logo2.png" alt="logo vinoteca">
+<!-- barra de navegacion -->
+<header>
+  <nav id="barra" class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <div class="navbar-brand">
+        <img src="img/logo2.png" alt="logo vinoteca">
+      </div>
+      <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon">
+        </span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item align-self-center">
+            <a class="nav-link text-white" aria-current="page" href="index.html">
+              Inicio
+            </a>
+          </li>
+          <li class="nav-item align-self-center">
+            <a class="nav-link text-white" href="nosotros.html">
+              Nosotros
+            </a>
+          </li>
+          <li class="nav-item dropdown align-self-center">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Elaboración
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="elaboraciontinto.html">Tinto </a></li>
+              <li><a class="dropdown-item" href="elaboracionblanco.html">Blanco</a></li>
+              <li><a class="dropdown-item" href="enconstruccion.html">Rosado</a></li>
+              <li><a class="dropdown-item" href="enconstruccion.html">Espumantes</a></li>
+            </ul>
+          </li>
+          <li class="nav-item align-self-center">
+            <a class="nav-link text-white" href="maridaje.html" tabindex="-1" aria-disabled="true">
+              Maridaje
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-      aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon">
-      </span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item align-self-center">
-          <a class="nav-link text-white" aria-current="page" href="index.html">
-            Inicio
-          </a>
-        </li>
-        <li class="nav-item align-self-center">
-          <a class="nav-link text-white" href="">
-            Nosotros
-          </a>
-        </li>
-        <li class="nav-item dropdown align-self-center">
-          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Elaboración
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="elavoraciontinto.html">Tinto </a></li>
-            <li><a class="dropdown-item" href="elavoracionblanco.html">Blanco</a></li>
-            <li><a class="dropdown-item" href="encontruccion.html">Rosado</a></li>
-            <li><a class="dropdown-item" href="encontruccion.html">Espumantes</a></li>
-          </ul>
-        </li>
-        <li class="nav-item align-self-center">
-          <a class="nav-link text-white" href="#" tabindex="-1" aria-disabled="true">
-            Aliados Gastronomicos
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+  </nav>
   <main>
     <section class="secciones">
       <h1 class="textoNeonRojo text-center">Ups! No encontramos esta página</h1>
