--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
         <h1 class="textoNeonRojo">Novedades</h1>
         <p class=" text-light">Actualizamos todos los lunes</p>
         <hr>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores tempora, assumenda est molestiae delectus
-          deleniti? Iste magni tempore eum fugit consequuntur odit, culpa hic explicabo est tempora accusamus corrupti
-          aliquid!</p>
+        <p> actualilzando...</p>
 
       </div>
       <div class="col-sm-12 col-md-6 col-xl-3">
